<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="18dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="18dp"
    android:orientation="vertical"
    android:weightSum="9"
    >

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Sujet de la réunion">



        <android.support.design.widget.TextInputEditText
            android:id="@+id/topic_Meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:hint="Salle de la réunion"
        >
        <TextView
            android:id="@+id/salle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choisissez une salle de réunion :"/>

        <Spinner
            android:id="@+id/spinner_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:spinnerMode="dialog" />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/collaborators_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Choisissez les participants :"/>


    <MultiAutoCompleteTextView
        android:id="@+id/collaborators_picker"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"
        android:minHeight="48dp" />


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choisissez une date et une heure de réunion :" />

        <Button
            android:id="@+id/select_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_text"
            android:onClick="showTimePicker"
            android:padding="16dp"
            android:text="Date et heure" />

        <TextView
            android:id="@+id/selectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_text"
            android:layout_toEndOf="@+id/select_date_time"
            android:padding="16dp" />

    </RelativeLayout>



    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Save Meeting" />


</LinearLayout>