<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filtre"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="Filtre"
        android:checkable="true"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/dateFilter"
                android:title="@string/dateFilter"
                />
            <item
                android:id="@+id/roomFilter"
                android:title="@string/roomFilter"
                />
        </menu>
    </item>

</menu>